src/index.css
@import 'tailwindcss';

html,
body {
  height: 100%;
  margin: 0;
}

#root {
  height: 100%;
}

